--- a/surface_texture/android/app/build.gradle
+++ b/surface_texture/android/app/build.gradle
@@ -27,6 +27,10 @@ android {
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
+    packagingOptions {
+        doNotStrip '**/*.so'
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
